--- a/apiClasses.properties
+++ b/apiClasses.properties
@@ -17,4 +17,6 @@ apiClasses=\
 	src/org/mozilla/javascript/SecuritySupport.java,\
 	src/org/mozilla/javascript/WrapHandler.java,\
 	src/org/mozilla/javascript/Wrapper.java,\
-	src/org/mozilla/javascript/Synchronizer.java
+	src/org/mozilla/javascript/Synchronizer.java,\
+	src/org/mozilla/javascript/serialize/ScriptableInputStream.java,\
+	src/org/mozilla/javascript/serialize/ScriptableOutputStream.java
